Fixed some layout issues.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* normalise css */
+
+@import "./normalize.css";
+
+/* Variables */
+
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
@@ -8,9 +14,6 @@
     --color-border: #ccc;
     --border-radius: 30px;
 }
-
-
-/*========= Typography ========*/
 
 *,
 *::after,
@@ -23,8 +26,15 @@
     color: #fff;
 }
 
+
+/*========= Typography ========*/
+
 html {
     font-size: 62.5%;
+}
+
+img {
+    width: 100%;
 }
 
 body {
@@ -43,7 +53,7 @@ h3 {
 }
 
 h1 {
-    font-size: 7rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -51,8 +61,9 @@ h2 {
 }
 
 h3 {
-    font-size: 3rem;
-    font-weight: 500;
+    font-size: 2.8rem;
+    font-weight: 600;
+    line-height: 1.3;
 }
 
 p {
@@ -189,7 +200,7 @@ a {
 }
 
 .icon--white {
-    fill: white;
+    fill: #fff;
 }
 
 
@@ -199,7 +210,7 @@ a {
     background: #f3f9fa;
     width: 64px;
     height: 64px;
-    border-radius: 50px;
+    border-radius: 100%;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -219,20 +230,16 @@ a {
     font-size: 1.8rem;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 2rem 3rem;
-    border: none;
+    /* padding: 2rem 3rem; */
+    padding: 2rem 4vw;
+    border: 0;
     border-radius: 40px;
     margin: 1rem 0;
     outline: 0;
     cursor: pointer;
     white-space: nowrap;
     text-align: center;
-    box-shadow: 0 0 10px 7.5px #f3f3f3;
     transition: 0.4s ease;
-}
-
-.btn:hover {
-    box-shadow: none;
 }
 
 .btn .icon {
@@ -248,7 +255,7 @@ a {
 }
 
 .btn--primary:hover {
-    background: #3a9ffd;
+    background: #3a8ffd;
 }
 
 .btn--secondary {
@@ -278,7 +285,6 @@ a {
 .btn--outline:hover {
     background: var(--color-heading);
     color: #fff;
-    border-color: #fff;
 }
 
 .btn--long {
@@ -326,10 +332,11 @@ a {
     border: none;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
+    /*Flex frow will decide width troubleshooted issue*/
 }
 
 .input-group .btn {
-    box-shadow: none;
     margin: 4px;
 }
 
@@ -351,7 +358,7 @@ a {
 
 .card__header,
 .card__body {
-    padding: 2rem 3rem;
+    padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -388,11 +395,11 @@ a {
 }
 
 .plan__price {
-    font-size: 6rem;
+    font-size: 5rem;
 }
 
 .plan__billing-cycle {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: 300;
     opacity: 0.85;
     margin-right: 1rem;
@@ -413,12 +420,17 @@ a {
     /*!critic*/
 }
 
-.plan {
-    position: relative;
-}
-
 .plan--popular {
     transform: scale(1.1);
+}
+
+
+/* .plan {
+    position: relative;
+} */
+
+.plan--popular .card__header {
+    position: relative;
 }
 
 .plan--popular .card__header::before {
@@ -441,6 +453,9 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+    .plan--popular {
+        transform: scale(1.1);
+    }
     .plan__name {
         font-size: 1.4rem;
     }
@@ -472,7 +487,7 @@ a {
 }
 
 .media__image {
-    margin-top: 1.2rem;
+    margin-top: 1rem;
 }
 
 
@@ -494,22 +509,22 @@ a {
 }
 
 .quote__author {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 500;
     font-style: normal;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
 }
 
 .quote__company {
     color: var(--color-heading);
     opacity: 0.4;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-style: normal;
 }
 
 .quote__line {
     position: relative;
-    bottom: 15px;
+    bottom: 10px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -533,7 +548,7 @@ a {
 
 @media screen and (min-width: 768px) {
     .grid--cols-2 {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -547,34 +562,43 @@ a {
 /* ==== Testimonials ==== */
 
 .testimonial {
-    padding: 2rem;
+    padding: 3rem;
+}
+
+.testimonial .quote {
+    margin: 2rem 0;
+    font-size: 110%;
 }
 
 .testimonial__image {
     position: relative;
+    margin: 0 3rem;
 }
 
-.testimonial__image>img {
-    width: 100%;
-    /* of par container */
-}
+
+/* .testimonial__image>img {
+    width: 100%;  of par container 
+ } */
 
 .testimonial__image>.icon-container {
     position: absolute;
     top: 3rem;
-    right: -3rem;
+    right: -32px;
 }
 
-.quote {
+
+/* .quote {
     font-size: 2rem;
-}
+} */
 
 @media screen and (min-width: 768px) {
-    .testimonial .quote {
-        font-size: 2.4rem;
+    .testimonial__image {
+        margin: 0;
     }
     .testimonial .quote {
-        margin-left: 6rem;
+        margin: 5rem 0 0 6rem;
+        font-size: 120%;
+        line-height: 1.5;
     }
 }
 
@@ -600,7 +624,6 @@ a {
 .callout .btn {
     justify-self: center;
     align-self: center;
-    box-shadow: none;
 }
 
 .callout__content {
@@ -616,7 +639,7 @@ a {
     }
     .callout .btn {
         justify-self: start;
-        margin: 0 3rem;
+        margin: 0 2rem;
     }
 }
 
@@ -635,6 +658,7 @@ a {
 
 .collapsible__chevron {
     transform: rotate(-90deg);
+    transition: transform 0.3s;
 }
 
 .collapsible__content {
@@ -651,7 +675,7 @@ a {
 
 .collapsible--expanded .collapsible__content {
     /* display: block; */
-    max-height: 100vh;
+    max-height: 100%;
     opacity: 1;
 }
 
@@ -664,13 +688,13 @@ a {
 }
 
 .block {
-    --padding-vertical: 6rem;
+    --padding-vertical: 5rem;
     padding: var(--padding-vertical) 2rem;
 }
 
 .block__header {
     text-align: center;
-    /* margin-bottom: 4rem; */
+    margin-bottom: 4rem;
 }
 
 .block__heading {
@@ -691,6 +715,7 @@ a {
 .block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+    /*try 95 both*/
 }
 
 .block--skewed-left {
@@ -706,7 +731,7 @@ a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 0 1.25rem;
+    padding: 1rem;
     align-items: center;
 }
 
@@ -718,13 +743,20 @@ a {
 
 .nav__item {
     padding: 0.5rem 2rem;
-    color: #d2d0db;
     border-bottom: 1px solid #222;
+}
+
+.nav__item:last-of-type {
+    border-bottom: none;
+}
+
+.nav__item>a {
     cursor: pointer;
+    color: #d2d0db;
     transition: color 0.35s;
 }
 
-.nav__item:hover {
+.nav__item>a:hover {
     color: #fff;
 }
 
@@ -745,6 +777,7 @@ a {
 
 .nav__brand {
     transform: translateY(5px);
+    width: 150px;
 }
 
 @media screen and (min-width: 768px) {
@@ -805,8 +838,9 @@ a {
 
 .block-domain__prices {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
+    color: var(--color-heading);
     font-size: 2rem;
     font-weight: 600;
     justify-items: center;
